ITW_09.2: CSS Animation Project - Fixed contrast

--- a/css/animationLogo.css
+++ b/css/animationLogo.css
@@ -1,7 +1,7 @@
 @keyframes first-animation {
-    0% {contrast: (0%);
+    0% { filter: contrast(0%);
      transform: translateX(200px);}
-    100% {contrast: (100%);
+    100% { filter: contrast(100%);
         transform: rotate(180deg);}
 }
 
